# frontend-sdl-rust

./: .gitignore  Cargo.toml  README.md  rel.sh
.cargo/: config.toml
scripts/: clippy.sh
src/: app.rs  dummy_audio.rs  lib.rs  main.rs  properties.rs
src/app/: audio.rs  config.rs  main_loop.rs  playlist.rs  video.rs
test-data/: config.properties  settings.toml
