[package]
name = "projectm_sdl"
version = "0.1.1"
edition = "2021"
rust-version = "1.68.2"

[dependencies]
libc = "*"
#projectm = { path = "../projectm-rs", version = "3", features = ["playlist", "static"] }
projectm = { version = "3", features = ['playlist', 'static'] }
sdl3 = { version = "0.14.24", features = ["build-from-source-static"] }
#sdl3 = { path = "../../sdl3-rs", version = "0", features = ["build-from-source"] }
rand = "0.8.5"
include_dir = "0.7"
clap = {version="4.4.5", features=["derive", "env"]}
confique = {version="0.3.0", features=["toml", "yaml", "json5"]}
serde = "1.0.188"
# gl = "0.14.0"

[features]
static-link = ["sdl3/static-link"]
dummy_audio = []
