[package]
name = "projectm_sdl"
version = "0.1.2"
edition = "2021"
rust-version = "1.68.2"

[dependencies]
libc = "*"
# Note: Uncomment and swap out the projectm dep below, if you are
# building/testing with a local copy of the projectm-rs crate
# projectm = { path = "../projectm-rs", version = "3", features = ["playlist", "static"] }
projectm = { version = "3", features = ['playlist', 'static'] }
sdl3 = { version = "0.18.0", features = ["build-from-source-static"] }
rand = "0.10.1"
include_dir = "0.7"
clap = { version = "4.6.1", features = ["derive", "env"] }
confique = { version = "0.4.0", features = ["toml", "yaml", "json5"] }

[features]
static-link = ["sdl3/static-link"]
dummy_audio = []
